[package]
name = "euler"
version = "0.1.0"
authors = ["Mariell Hoversholm <proximyst@proximyst.com>"]
edition = "2018"

[dependencies]
eyre = "~0.6"
rayon = "~1"
num = "~0.3"
itertools = "~0.10"
once_cell = "~1.5"
strum = { version = "~0.20", features = ["derive"] }
parking_lot = "~0.11"
chrono = "~0.4"
